# DogRun

./: .gitignore  CMakeLists.txt  DogRun  README.md
include/: Input.h  Renderer2D.h
include/core/: Game.h
include/entities/: Entity.h  Obstacle.h  Player.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: Input.cpp  Renderer2D.cpp  glad.c  main.cpp
src/core/: Game.cpp
src/entities/: Entity.cpp  Obstacle.cpp  Player.cpp
