cmake_minimum_required(VERSION 3.10)
project(DogRun)

set(CMAKE_CXX_STANDARD 17)

find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)

include_directories(include)

add_executable(DogRun
    src/main.cpp
    src/core/Game.cpp
    src/Renderer2D.cpp
    src/glad.c
)

target_link_libraries(DogRun
    OpenGL::GL
    glfw
)
